[package]
name = "jian_rs"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[features]
default = []
with-async = ["futures-channel"]

[dependencies]
cache-padded = "1.1.1"
concurrent-queue = "1.1.1"
futures-channel = { version = "0.3.5", default-features = false, optional = true }
num_cpus = "1.13.0"
parking = "1.0.5"
parking_lot = "0.11.0"

[dev-dependencies]
actix-rt = "1.1.1"
futures = "0.3.5"