[package]
name = "jian_rs"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dev-dependencies]
actix-rt = "1.1.1"
futures = "0.3.5"
num_cpus = "1.13.0"
once_cell = "1.4.0"
parking_lot = "0.11.0"
threadpool = "1.8.1"

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
